k8s/deploy.yml
apiVersion: v1
kind: Service
metadata:
  name: votingapp-svc
spec:
  type: NodePort
  ports: 
  - port: 80
    nodePort: 30001
    protocol: TCP
  selector:
    app: votingapp
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: votingapp-deploy
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: votingapp
    spec:
      containers:
      - name: votingapp
        image: paulopez/votingapp:latest
        ports:
        - containerPort: 80
