k8s/registry.yml

apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30400
      name: registry
  selector:
    app: registry
    tier: registry
  type: NodePort
---

apiVersion: v1
kind: Service
metadata:
  name: registry-ui
spec:
  ports:
    - port: 8080
  selector:
    app: registry
    tier: registry
---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registry
  labels:
    app: registry
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: registry
        tier: registry
    spec:
      containers:
      - image: registry:2
        name: registry
        volumeMounts:
        - name: registry-persistent-storage
          mountPath: /var/lib/registry
        ports:
        - containerPort: 5000
          name: registry
      - name: registryui
        image: hyper/docker-registry-web
        ports:
        - containerPort: 8080
      volumes:
      - name: registry-persistent-storage
        persistentVolumeClaim:
          claimName: registry-claim
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: registry-ui
spec:
  rules:
  - host: registry.io
    http:
      paths:
      - path: /
        backend:
          serviceName: registry-ui
          servicePort: 8080
