k8s/votingapp-commands.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: votingapp-commands
spec:
  template:
    metadata:
      labels:
        app: votingapp-commands
    spec:
      containers:
      - name: votingapp-commands
        image: localhost:30400/votingapp-commands:${TAG}
---
apiVersion: v1
kind: Service
metadata:
  name: votingapp-commands
spec:
  ports:
    - port: 80
  selector:
    app: votingapp-commands

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: votingapp-commands
 annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: votingapp.io
    http: 
      paths:
      - path: /commands
        backend:
          serviceName: votingapp-commands
          servicePort: 80
