k8s/votingapp-queries.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: votingapp-queries
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: votingapp-queries
    spec:
      containers:
      - name: votingapp-queries
        image: localhost:30400/votingapp-queries:${TAG}
---
apiVersion: v1
kind: Service
metadata:
  name: votingapp-queries
spec:
  ports:
    - port: 80
  selector:
    app: votingapp-queries

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: votingapp-queries
 annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: votingapp.io
    http: 
      paths:
      - path: /queries
        backend:
          serviceName: votingapp-queries
          servicePort: 80
