k8s/votingapp.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: votingapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: votingapp
        environment: staging
    spec:
      containers:
      - name: votingapp
        image: votingapp:1
        livenessProbe: 
          httpGet:
            path: /hc/live
            port: 80
        readinessProbe: 
          httpGet:
            path: /hc/ready
            port: 80

---
apiVersion: v1
kind: Service
metadata:
  name: votingapp
spec:
  ports:
    - port: 80
  selector:
    app: votingapp

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: votingapp
spec:
  rules:
  - host: votingapp.io
    http: 
      paths:
      - path: /
        backend:
          serviceName: votingapp
          servicePort: 80
